adicionar metodo update
